--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,12 +5,12 @@
   "description": "This extension is for Zahada",
   "version": "1.0",
   "background" : {
-    "scripts": ["background.js"],
+    "scripts": ["js/background.js"],
     "persistent": false
   },
   "page_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
+    "default_icon": "images/icon.png",
+    "default_popup": "html/popup.html"
   },
   "permissions": [
 	"declarativeContent",
